update README, split prepare_data function to smaller functions

--- a/wgscovplot/tmpl/amplicon_covplot_template.html
+++ b/wgscovplot/tmpl/amplicon_covplot_template.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Interactive Coverage Plot</title>
-    <script src="{{jquery}}"></script>
-    <script type="text/javascript" src="{{ echarts_js }}"></script>
-    <link href="{{select2_css}}" rel="stylesheet" />
-    <script src="{{select2_js}}"></script>
+    <title>WGS Coverage Plot</title>
+    <script>{{ jquery_js }}</script>
+    <script>{{ echarts_js }}</script>
+    <style>{{ select2_css }}</style>
+    <script>{{ select2_js }}</script>
 </head>
 <body>
 
