--- a/wgscovplot/tmpl/covplot_template.html
+++ b/wgscovplot/tmpl/covplot_template.html
@@ -90,7 +90,6 @@
     </style>
 </head>
 <body>
-
     <div class="tab">
         <button class="tablinks" data-bs-toggle="offcanvas" data-bs-target="#controlmenu">☰ Chart Options</button>
         <button class="tablinks" onclick="showChart(event,'chart')">Coverage Plot</button>
@@ -193,6 +192,23 @@
                         </div>
                     </div>
                 </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#genefeatures" aria-expanded="false" aria-controls="genefeatures">
+                            Gene Features
+                        </button>
+                    </h2>
+                    <div id="genefeatures" class="accordion-collapse collapse">
+                        <div class="accordion-body">
+                            <p>Show Gene Label:  
+                                <select id="genelabel" onchange="geneLabel()" style="width: 25%">
+                                    <option value="true" selected>True</option>
+                                    <option value="false" >False</option>
+                                </select>
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -284,7 +300,8 @@
 
     <script>
         var ref_len = window.ref_seq.length;
-        var gird_length;
+        var gene_features_properties = {{ gene_features_properties }}
+        var grid_length;
         var positions = [...Array(ref_len + 1).keys()];
         positions.shift();
 
@@ -315,7 +332,7 @@
             }
             var end = api.coord([api.value(2), categoryIndex]);
             //var height = api.size([0,1])[1]*15000;
-            var height = 12;
+            var height = gene_features_properties['rec_items_height'];
             var width = end[0] - start[0] ;
             var x = start[0];
             var y = y_start - height/2  - api.value(3);
@@ -416,9 +433,6 @@
                 type: "custom",
                 xAxisIndex: index,
                 yAxisIndex: index,
-                labelLayout:{
-                    hideOverlap: false,
-                },
                 renderItem:renderGeneFeatures,
                 data: gene_feature,
                 tooltip:{
@@ -489,7 +503,7 @@
                 });
             }
             axes.push({
-                max: 80,
+                max: gene_features_properties['max_grid_height'],
                 gridIndex: samples.length,
                 show: false
             })
@@ -593,7 +607,7 @@
             })
             grids.push({
                 show: true,
-                height: "8%",
+                height: gene_features_properties['grid_height'],
                 top: last_height + last_top + 3 + "%"
             })
             return grids
@@ -694,14 +708,14 @@
                     variants.push(window.variants[entries])
                 }
             }
-            gird_length = samples.length
+            grid_length = samples.length
             var options = {
                 title: {
                 },
                 dataset: getDatasets(depths, positions),
                 xAxis: getXAxes(samples, ref_len),
                 yAxis: getYAxes(samples, "log", 100000),
-                series: [...getDepthSeries(samples),...getVariantsSeries(variants, depths), ...getGeneFeatureSeries(gird_length)],
+                series: [...getDepthSeries(samples),...getVariantsSeries(variants, depths), ...getGeneFeatureSeries(grid_length)],
                 tooltip: getTooltips(samples, depths, variants),
                 toolbox: {
                     show: "true",
@@ -719,13 +733,13 @@
                     {
                         type: "inside",
                         filterMode: 'none',
-                        xAxisIndex: [...Array(gird_length + 1).keys()],
+                        xAxisIndex: [...Array(grid_length + 1).keys()],
                         zoomLock: false
                     },
                     {
                         show: true,
                         filterMode: 'none',
-                        xAxisIndex: [...Array(gird_length + 1).keys()],
+                        xAxisIndex: [...Array(grid_length + 1).keys()],
                         type: "slider",
                         zoomLock: false
                     }
@@ -753,7 +767,7 @@
             var scaletype = document.getElementById('scale').value;
             var yaxis_option = chart.getOption().yAxis;
             if (scaletype == 'value'){
-                for(let i = 0 ; i < gird_length; i++){
+                for(let i = 0 ; i < grid_length; i++){
                     yaxis_option[i].type = scaletype
                     yaxis_option[i].min = 0
                     yaxis_option[i].max = 40000
@@ -762,13 +776,106 @@
                 document.getElementById('ymax').value = 40000
             }
             else{
-                for(let i = 0 ; i < gird_length; i++){
+                for(let i = 0 ; i < grid_length; i++){
                     yaxis_option[i].type = scaletype
                     yaxis_option[i].min = 1
                     yaxis_option[i].max = 100000
                 }
                 chart.setOption({yAxis: yaxis_option})
                 document.getElementById('ymax').value = 100000
+            }
+        }
+
+        function updateGeneFeatures(params, api){
+            var categoryIndex = api.value(0);
+            var start = api.coord([api.value(1), categoryIndex]);
+            var points;
+            var shape;
+            if (categoryIndex==0){
+                y_start = start[1]
+            }
+            var end = api.coord([api.value(2), categoryIndex]);
+            //var height = api.size([0,1])[1]*15000;
+            var height = gene_features_properties['rec_items_height'];
+            var width = end[0] - start[0] ;
+            var x = start[0];
+            var y = y_start - height/2  - api.value(3);
+            /* 5 Points of shape
+            --------------------
+            |                     \
+            |                      \
+            |                      /
+            |                     /
+            --------------------                
+            */
+            if (api.value(4) == 1){ // Plus strain
+                points = [
+                    [x, y],
+                    [x + width - width/100 , y],
+                    [x + width , y - height / 2 ],
+                    [x + width - width/100 , y - height ],
+                    [x, y - height ]
+                ]
+                shape = echarts.graphic.clipPointsByRect(points,
+                    {
+                        x: params.coordSys.x,
+                        y: params.coordSys.y,
+                        width: params.coordSys.width,
+                        height: params.coordSys.height
+                });
+                return {
+                    type: 'polygon',
+                    shape: {
+                        points: shape
+                    },
+                    style : api.style({}),
+                    textContent: {
+                        type: 'text',
+                        invisible: true,
+                    }
+                };
+            }
+            else{ // Minus Strand, reverse point order
+                 points = [
+                    [x, y - height/2],
+                    [x + width/100, y],
+                    [x + width, y],
+                    [x + width, y - height],
+                    [x + width/100, y - height]
+
+                ]
+                shape = echarts.graphic.clipPointsByRect(points,
+                    {
+                        x: params.coordSys.x,
+                        y: params.coordSys.y,
+                        width: params.coordSys.width,
+                        height: params.coordSys.height
+                });
+                return {
+                    type: 'polygon',
+                    shape: {
+                        points: shape
+                    },
+                    style : api.style({}),
+                    textContent: {
+                        type: 'text',
+                        invisible: true,
+                    }
+                };
+            }
+        }
+
+        function geneLabel(){
+            var hideoverlap = document.getElementById('genelabel').value;
+            var series_option = chart.getOption().series;
+            gene_features_grid_index = series_option.length - 1
+            if (hideoverlap=='false'){
+                series_option[gene_features_grid_index]['renderItem'] = updateGeneFeatures
+                chart.setOption({series: [...series_option]})
+            }
+            else{
+                series_option[gene_features_grid_index]['renderItem'] = renderGeneFeatures
+                chart.setOption({series: [...series_option]})
             }
         }
 
@@ -780,7 +887,7 @@
                     {
                         type: "inside",
                         filterMode: 'none',
-                        xAxisIndex: [...Array(gird_length + 1).keys()]
+                        xAxisIndex: [...Array(grid_length + 1).keys()]
                     },
                     {
                         show: false,
@@ -795,12 +902,12 @@
                     {
                         type: "inside",
                         filterMode: 'none',
-                        xAxisIndex: [...Array(gird_length + 1).keys()]
+                        xAxisIndex: [...Array(grid_length + 1).keys()]
                     },
                     {
                         show: true,
                         filterMode: 'none',
-                        xAxisIndex: [...Array(gird_length + 1).keys()],
+                        xAxisIndex: [...Array(grid_length + 1).keys()],
                         type: "slider"
                     }
                 ]
@@ -811,7 +918,7 @@
         function setYMax(){
             var ymax = document.getElementById('ymax').value;
             var yaxis_option = chart.getOption().yAxis;
-            for(let i = 0 ; i < gird_length; i++){
+            for(let i = 0 ; i < grid_length; i++){
                 yaxis_option[i].max = ymax
             }
             chart.setOption({yAxis: yaxis_option})
@@ -847,14 +954,14 @@
                 depths.push(window.depths[selected_samples])
                 variants.push(window.variants[selected_samples])
             }
-            gird_length = samples.length
+            grid_length = samples.length
             var options = {
                 title: {
                 },
                 dataset: getDatasets(depths, positions),
                 xAxis: getXAxes(samples, ref_len),
                 yAxis: getYAxes(samples, "log", 100000),
-                series: [...getDepthSeries(samples),...getVariantsSeries(variants, depths), ...getGeneFeatureSeries(gird_length)],
+                series: [...getDepthSeries(samples),...getVariantsSeries(variants, depths), ...getGeneFeatureSeries(grid_length)],
                 tooltip: getTooltips(samples, depths, variants),
                 toolbox: {
                     show: "true",
@@ -872,12 +979,12 @@
                     {
                         type: "inside",
                         filterMode: 'none',
-                        xAxisIndex: [...Array(gird_length + 1).keys()]
+                        xAxisIndex: [...Array(grid_length + 1).keys()]
                     },
                     {
                         show: true,
                         filterMode: 'none',
-                        xAxisIndex: [...Array(gird_length + 1).keys()],
+                        xAxisIndex: [...Array(grid_length + 1).keys()],
                         type: "slider"
                     }
                 ],
@@ -910,7 +1017,6 @@
             $('.selected-samples').select2();
             $(".selected-samples").on("change", function (e) {
                 var selectData = $(".selected-samples").select2("data");
-                console.log(selectData)
                 var samples_list = []
                 for (var [key, entries] of selectData.entries()){
                    samples_list.push(selectData[key].text)
